--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "html-react-parser": "^5.1.10",
     "microcms-js-sdk": "^3.1.2",
-    "next": "14.2.4",
+    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
