--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.5.4",
     "html-react-parser": "^5.1.10",
     "microcms-js-sdk": "^3.1.2",
-    "next": "^14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "swr": "^2.2.5"
   },
